[internal] Add auth
