# internal/infrastructure/database/memory/init_data.go
@@ -3,8 +3,10 @@ package memory
 import (
 	"like-api/internal/domain/entities"
 	"like-api/internal/domain/repositories"
+	"time"
 
 	"github.com/google/uuid"
+	"golang.org/x/crypto/bcrypt"
 )
 
 func InitData(
@@ -13,10 +15,14 @@ func InitData(
 	likeRepo repositories.LikeRepository,
 ) {
 	// Hardcoded users
+	hash, err := bcrypt.GenerateFromPassword([]byte("1234"), bcrypt.DefaultCost)
+	if err != nil {
+		panic(err)
+	}
 	users := []entities.User{
-		{ID: "user1", Username: "john_doe", Name: "John Doe", Email: "john@example.com"},
-		{ID: "user2", Username: "jane_smith", Name: "Jane Smith", Email: "jane@example.com"},
-		{ID: "user3", Username: "bob_wilson", Name: "Bob Wilson", Email: "bob@example.com"},
+		{ID: "user1", Username: "john_doe", Name: "John Doe", Email: "john@example.com", Password: string(hash), CreatedAt: time.Now().Format(time.RFC3339)},
+		{ID: "user2", Username: "jane_smith", Name: "Jane Smith", Email: "jane@example.com", Password: string(hash), CreatedAt: time.Now().Format(time.RFC3339)},
+		{ID: "user3", Username: "bob_wilson", Name: "Bob Wilson", Email: "bob@example.com", Password: string(hash), CreatedAt: time.Now().Format(time.RFC3339)},
 	}
 
 	for _, user := range users {
