# internal/interfaces/http/user_handler.go
@@ -24,7 +24,7 @@ func NewUserHandler(getUsersUseCase userusecase.GetUsersUseCase) *UserHandler {
 // @Accept json
 // @Produce json
 // @Success 200 {object} response.Response
-// @Router /users [get]
+// @Router /api/v1/users [get]
 func (h *UserHandler) GetUsers(c *gin.Context) {
 	// Execute use case
 	input := userusecase.GetUsersInput{}
